--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <nav>
-<a href="/Users/Parth/week-2-practice-assessment/jupiter.html/">JUPITER</a> |
+<a href="/Users/Parth/parthahir.github.io/jupiter.html/">JUPITER</a> |
 <a href="/Users/Parth/week-2-practice-assessment/mars.html/">MARS</a> |
 </nav>
 
