--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <nav>
 <a href="/Users/Parth/parthahir.github.io/jupiter.html/">JUPITER</a> |
-<a href="/Users/Parth/week-2-practice-assessment/mars.html/">MARS</a> |
+<a href="/Users/Parth/parthahir.github.io/mars.html/">MARS</a> |
 </nav>
 
 <p><strong>Explore</strong> these two other planets.</p>
