nav problems fixed

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
 
 <nav>
-<a href="/Users/Parth/week-2-practice-assessment/jupiter.html/">JUPITER</a> |
-<a href="/Users/Parth/week-2-practice-assessment/mars.html/">MARS</a> |
+<a href="/Users/Parth/parthahir.github.io/jupiter.html/">JUPITER</a> |
+<a href="/Users/Parth/parthahir.github.io/mars.html/">MARS</a> |
 </nav>
 
 <p><strong>Explore</strong> these two other planets.</p>
