spacing errors and typos fixed

--- a/index.html
+++ b/index.html
@@ -14,22 +14,20 @@
 
 <h2> Factors of Earth </h2>
 <ul>
-	<li> Rich in soil <li>
-	<li> Majority of the Planet is filled with Water <li>
-	<l1> Human Population = 7.6 Billion <li>
-
+	<li> Rich in soil </li>
+	<li> Majority of the Planet is filled with Water </li>
+	<li> Human Population = 7.6 Billion </li>
 </ul>
 
 <h2> Atmospheric Conditions: 5 Main Layors </h2>
 <ul>
-	<li> Exosphere <li>
-	<li> Thermosphere <li>
-	<l1> Mesosphere <li>
-	<l1> stratosphere <li>
-	<l1> troposphere <li>
-
-
+	<li> Exosphere </li>
+	<li> Thermosphere </li>
+	<li> Mesosphere </li>
+	<li> stratosphere </li>
+	<li> troposphere </li>
 </ul>
+<p> </p>
 
 <table border=1>
     <tr>
@@ -52,7 +50,7 @@
       <td>Deadly</td>
     </tr>
 </table>
-
+<p> </p>
 <form name="Planets" action="earth.html" method="post">
   <fieldset>
     <div>
@@ -71,10 +69,12 @@
     </div>
   </fieldset>
 
+<p> </p>
+
     <div>
       <label>Planet of choice to visit:</label>
       <select name="Favorite Planet">
-        <option value="name">Eartg</option>
+        <option value="name">Earth</option>
         <option value="name">Jupiter</option>
         <option value="name">Mars</option>
       </select>
