Typos and tables fixed

--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
     <tr>
       <td>Habitable</td>
       <td>Not Habitable</td>
-      <td>Not Habitable/td>
+      <td>Not Habitable</td>
     </tr>
     <tr>
-      <td rowspan="2">Water Abundance</td>
+      <td> Water </td>
       <td>No Water</td>
       <td>Minute Water</td>
     </tr>
     <tr>
+      <td>Full of life</td>
       <td>Deadly</td>
       <td>Deadly</td>
     </tr>
