--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Planet Earth</title>
   <meta name="description" content="Informational website outlining evironmental degradation on Planet Earth">
-  <meta name="author" content="Parth Ahir">
+  <ta name="author" content="Parth Ahir">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -77,6 +77,7 @@
     <p>This webpage does not fully got into breadth of all the aspects of climate change. This surface level infromation should be enough to be the catalyst for you to go out and do more research on the topic and spread the word! 
     </p>
   </div>  
+  
   
 </body>
 </html>
