--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <div id ="Climate Justice" class="section">
-    <h2>We must fight for our Earth!(The Set)</h2>
+    <h2>We must fight for our Earth! </h2>
     <img src="https://bronxclimatejusticenorth.files.wordpress.com/2015/04/640_setp_21__2009_climate_action_sf_3_1_1_1.jpg" alt="set">
     <p>
       We must tackle this issue from the core, that is, within this new generation the atrocities of climate change and lack of work being done on climate-justice issues must be taught at a young age at all educational institutions world-wide; through educating our and providing the dialogue for this issue, more innovations and voices will be heard toward solving this <em>emergency issue.</em> It is up to us, those who are environmentally conscious of the atrocities happening to our planet as result of industry heads and corrupt politicians to disseminate this information to the masses.</p>
